objects/echosign_dev1__Lead_Conversion_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>echosign_dev1__Account_Retain_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a Lead is converted to an Account, retain all previous agreements from the Lead with the Account record.</description>
        <inlineHelpText>When a Lead is converted to an Account, retain all previous agreements from the Lead with the Account record.</inlineHelpText>
        <label>Account Retain Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Contact_Retain_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a Lead is converted to an Contact, retain all previous agreements from the Lead with the Contact record.</description>
        <inlineHelpText>When a Lead is converted to an Contact, retain all previous agreements from the Lead with the Contact record.</inlineHelpText>
        <label>Contact Retain Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Opportunity_Retain_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a Lead is converted to an Opportunity, retain all previous agreements from the Lead with the Opportunity record.</description>
        <inlineHelpText>When a Lead is converted to an Opportunity, retain all previous agreements from the Lead with the Opportunity record.</inlineHelpText>
        <label>Opportunity Retain Agreement</label>
        <type>Checkbox</type>
    </fields>
    <label>EchoSign Lead Conversion Settings</label>
</CustomObject>